@@ -48,6 +48,21 @@ begin
           end
         end
 
+        def select_rows(sql, name = nil)
+          stmt = nil
+          log(sql, name) do
+            stmt = DB2::Statement.new(@connection)
+            stmt.exec_direct("#{sql.gsub(/=\s*null/i, 'IS NULL')} with ur")
+          end
+
+          rows = []
+          while row = stmt.fetch
+            rows << row
+          end
+          stmt.free
+          rows
+        end
+
         def insert(sql, name = nil, pk = nil, id_value = nil, sequence_name = nil)
           execute(sql, name = nil)
           id_value || last_insert_id
